--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,18 +116,15 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-.intro {
-    text-align: center;
-}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps { 
-    text-align: center;
     background: #fce138;
 }
 .steps div {
@@ -155,10 +152,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 } 
 .primary-border {
     border-color: #fce138;
@@ -167,7 +165,7 @@ section {
     border-color: #39a6b2;
 }
 .trainers {
-    text-align: center;
+/* add style here */
 }
 .trainer {    
     width: 900px;
@@ -198,14 +196,7 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
-.text-left {
-    text-align: left;
-}  
-.text-right {
-    text-align: right;
-}
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -236,5 +227,14 @@ section {
 }  
 .contact-info a {
     color: #fce138;
+}
+.text-left {
+    text-align: left;
+}  
+.text-right {
+    text-align: right;
+}
+.flex-row {
+    display: flex;
 }
   
