--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -68,6 +68,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-form {
     border: solid 3px #024e76;
@@ -90,7 +91,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -168,7 +169,7 @@ section {
     font-size: 18px;
 }
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -277,4 +278,6 @@ section {
 .flex-row {
     display: flex;
 }
-  
+@media screen and (max-width: 980px) {
+
+}
