Enhance CSS style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,18 +6,26 @@
 body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
-}
+}  
 header {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
     padding: 20px 35px;
     background-color: #39a6b2;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
     text-decoration: none;
@@ -37,7 +45,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+} 
 footer {
     background: #fce138;
     width: 100%;
@@ -64,7 +79,8 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -77,6 +93,8 @@ section {
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -97,6 +115,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .form-input {
     border: 1px solid #024e76;
@@ -106,6 +125,12 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .hero-form label {
     margin: 0 5px;
@@ -116,7 +141,11 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
+.hero-form button:hover {
+    background-color: #39a6b2;  
+} 
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -134,9 +163,13 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
 }
 .steps { 
     background: #fce138;
+}
+.step:last-child {
+    border-bottom: none;
 }
 .step-info {
     flex: 2 70%;
@@ -259,6 +292,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.contact-form input:focus, 
+.contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .contact-form button {
     width: 100%;
@@ -268,6 +308,15 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
+.some-class {
+    text-shadow: 5px 10px 15px black;
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.25);
 }
 .text-left {
     text-align: left;
@@ -282,6 +331,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1 {
         width: 100%;
