--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }  
 header {
@@ -13,7 +18,7 @@ header {
     background-attachment: fixed;
     background-position: 80%;
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     justify-content: space-between;
     flex-wrap: wrap;
     position: -webkit-sticky;
@@ -25,12 +30,12 @@ header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 header nav {
     margin: 7px 0;
@@ -49,13 +54,13 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 } 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -63,7 +68,7 @@ footer {
     flex-wrap: wrap;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -72,7 +77,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding: 60px;
@@ -88,10 +93,10 @@ section {
     align-items: flex-start;
 }
 .hero-form {
-    border: solid 3px #024e76;
-    background-color: #fce138;
+    border: 3px solid var(--secondary-color);
+    background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -115,15 +120,15 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -137,40 +142,110 @@ section {
     margin: 0 5px;
 }
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 10px;
 }
 .hero-form button:hover {
-    background-color: #39a6b2;  
+    background-color: var(--tertiary-color);  
+}
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color););
 } 
+.checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+.section-title {
+    font-size: 48px;
+    color: var(--secondary-color);
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+} 
+.primary-border {
+    border-color: var(--primary-color);
+}  
+.secondary-border {
+    border-color: var(--tertiary-color);
+}
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
     text-align: center;
 }
+.steps { 
+    background: var(--primary-color);
+}
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #39a6b2;
-}
-.steps { 
-    background: #fce138;
 }
 .step:last-child {
     border-bottom: none;
+}
+.step h3 {
+    color: var(--secondary-color);
+    font-size: 46px;
+    flex: 1 30%;
 }
 .step-info {
     flex: 2 70%;
@@ -188,34 +263,14 @@ section {
 .step-text {
     flex: 12;
 }
-.step h3 {
-    color: #024e76;
-    font-size: 46px;
-    flex: 1 30%;
-}
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }  
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
-}
-.section-title {
-    font-size: 48px;
-    color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-} 
-.primary-border {
-    border-color: #fce138;
-}  
-.secondary-border {
-    border-color: #39a6b2;
 }
 .trainers {
     width: 100%;
@@ -226,8 +281,8 @@ section {
 }
 .trainer {    
     margin: 0 auto 20px auto;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 .trainer img {
@@ -249,10 +304,10 @@ section {
     font-size: 17px;
 }
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 } 
 .contact-info {
     display: flex;
@@ -270,7 +325,7 @@ section {
     color: white;
 }
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }  
 .contact-info p,
@@ -281,15 +336,15 @@ section {
     font-style: normal;
 }  
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-form input,
 .contact-form textarea {
-    border: 1px solid #024e72;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -304,16 +359,16 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
 }
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 .some-class {
     text-shadow: 5px 10px 15px black;
@@ -327,58 +382,6 @@ section {
 }
 .flex-row {
     display: flex;
-}
-.checkbox-wrapper input, .radio-wrapper input {
-    opacity: 0;
-}
-.checkbox-wrapper label, .radio-wrapper label {
-    position: relative;
-    left: 10px;
-    margin: 10px;
-    line-height: 1.6;
-}
-.checkbox-wrapper label::before, .radio-wrapper label::before {
-  content: "";
-  height: 20px;
-  width: 20px;
-  background: rgba(255, 255, 255, 0.75);  
-  border: 1px solid #024e76;  
-  position: absolute;
-  top: -4px;
-  left: -30px;
-}
-.checkbox-wrapper label::after {
-    content: "";
-    height: 6px;
-    width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
-    position: absolute;
-    left: -26px;
-    top: 1px;
-    transform: rotate(-58deg);
-}
-.checkbox-wrapper input + label::after, 
-.radio-wrapper input + label::after {
-  content: none;
-}
-.checkbox-wrapper input:checked + label::after, 
-.radio-wrapper input:checked + label::after {
-  content: "";
-}
-.radio-wrapper label::before {
-    border-radius: 50%;
-}
-.radio-wrapper label::after {
-    content: "";
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #024e76;
-    position: absolute;
-    left: -29px;
-    top: -3px;
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
 }
 @media screen and (max-width: 980px) {
     header {
@@ -439,6 +442,9 @@ section {
     }
     .step-text {
         flex: 100%;  
+    }
+    .trainer-bio h3, .trainer-bio h4 {
+        display: block;
     }
 }
 @media screen and (max-width: 575px) {
